--- a/client/styles/less/department/main.less
+++ b/client/styles/less/department/main.less
@@ -29,22 +29,22 @@
   .department-main {
     margin-left: 170px;
     margin-bottom: 80px;
-    .font-22{
-      font-size:22px;
+    .font-22 {
+      font-size: 22px;
     }
-    .font-20{
-      font-size:20px;
+    .font-20 {
+      font-size: 20px;
     }
     .panel-list {
       .panel {
         height: 287px;
         overflow: hidden;
-        table{
-          table-layout:fixed;
-          tr{
-            td{
-              overflow:hidden;
-              white-space:nowrap;
+        table {
+          table-layout: fixed;
+          tr {
+            td {
+              overflow: hidden;
+              white-space: nowrap;
               text-overflow: ellipsis;
               pre {
                 overflow: hidden;
@@ -62,16 +62,22 @@
           }
         }
       }
+      .panel-follow-depart {
+        .panel-body {
+          padding: 15px 0;
+          height: 260px;
+          overflow: auto;
+        }
+      }
     }
     .focus-bureau-list {
       height: 200px;
-      .add-focus-option{
-        padding-bottom:15px;
-        .dep-select{
-          display:inline;
+      .add-focus-option {
+        padding-bottom: 15px;
+        .dep-select {
+          display: inline;
         }
       }
-
       .bureau-item {
         .thumbnail {}
         .caption {
